--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		
 		<image id="tileset" src="gfx/tileset.png" style="display : none"></image>
 		
+		<audio id = "boss_greeting" src="sfx/Boss greeting.ogg"></audio>
+		<audio id = "boss_parting" src="sfx/Boss parting.ogg"></audio>
+		
 		<!--/Assets-->
 		
         <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
