The game is ther, the rest is frills.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!--Assets-->
 		
 		<image id="tileset" src="gfx/tileset.png" style="display : none"></image>
+		<image id="boss_sprites" src="gfx/boss.png" style="display : none"></image>
 		
 		<audio id = "boss_greeting" src="sfx/Boss greeting.ogg"></audio>
 		<audio id = "boss_parting" src="sfx/Boss parting.ogg"></audio>
