Barring major bugs, final commit of LD29.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
 		
 		<image id="tileset" src="gfx/tileset.png" style="display : none"></image>
 		<image id="boss_sprites" src="gfx/boss.png" style="display : none"></image>
+		<image id="intro" src="gfx/intro.png" width="800" height="600" style="display : none"></image>
 		
+		<audio id = "attack" src="sfx/Attack.ogg"></audio>
 		<audio id = "boss_greeting" src="sfx/Boss greeting.ogg"></audio>
 		<audio id = "boss_parting" src="sfx/Boss parting.ogg"></audio>
+		<audio id = "boss_shoot" src="sfx/Boss_shoot.wav"></audio>
+		<audio id = "explosion" src="sfx/Explosion.wav"></audio>
+		<audio id = "pickup" src="sfx/Pickup.wav"></audio>
+		<audio id = "shoot" src="sfx/Shoot.wav"></audio>
+		<audio id = "shotgun" src="sfx/Shotgun.wav"></audio>
+		<audio id = "stairs" src="sfx/stairs.ogg"></audio>
+		<audio id = "water" src="sfx/Water.wav"></audio>
+		
+		<audio id = "song0" src="sfx/songs/song0.ogg"></audio>
+		<audio id = "song1" src="sfx/songs/song1.ogg"></audio>
+		<audio id = "song2" src="sfx/songs/song2.ogg"></audio>
 		
 		<!--/Assets-->
 		
@@ -22,7 +35,7 @@
 		
 	</head>
 	
-	<body style="margin: 0">
+	<body style="margin: 0; background : #000000;">
 		<canvas id="canvas" width="0" height="0" style = "background : #000000; display: block;">
 			
             <script type="text/javascript" src="GameBoilerplate.js"></script>
